Changes for next release.
Committer: Erik Wright <eswright@pitt.edu>
	modified:   DESCRIPTION
	modified:   R/DesignPrimers.R
	modified:   R/DesignProbes.R
	modified:   R/DesignSignatures.R
	modified:   R/FindChimeras.R
	modified:   R/FindSynteny.R
	modified:   R/IdClusters.R
	modified:   R/IdTaxa.R
	modified:   R/PredictDBN.R
	modified:   R/Seqs2DB.R
	modified:   R/Taxa-class.R
	modified:   R/TrimDNA.R
	modified:   man/DesignSignatures.Rd
	modified:   man/FindSynteny.Rd
	modified:   man/IdTaxa.Rd
	modified:   man/LearnTaxa.Rd
	modified:   man/PredictDBN.Rd
	modified:   man/Synteny-class.Rd
	modified:   man/Taxa-class.Rd
	modified:   man/TrimDNA.Rd
	modified:   src/ChainSegments.c
	modified:   src/Cluster.c
	modified:   src/PredictDBN.c
	modified:   vignettes/ClassifySequences.Rnw
	modified:   vignettes/DECIPHERing.Rnw
	modified:   vignettes/DesignSignatures.Rnw

--- a/vignettes/ClassifySequences.Rnw
+++ b/vignettes/ClassifySequences.Rnw
@@ -324,7 +324,7 @@ head(assignment)
 
 \subsection{Plotting the results}
 
-We can also plot the results, as shown in Figure \ref{f2}.  This produces a pie chart showing the relative abundance of the taxonomic groups assigned to test sequences.  It also displays the training taxonomic tree, with edges colored where they match the taxonomic groups shown in the pie chart.  Note that we could also have only plotted the pie chart by omitting the \code{trainingSet}.
+We can also plot the results, as shown in Figure \ref{f2}.  This produces a pie chart showing the relative abundance of the taxonomic groups assigned to test sequences.  It also displays the training taxonomic tree, with edges colored where they match the taxonomic groups shown in the pie chart.  Note that we could also have only plotted the pie chart by omitting the \code{trainingSet}.  Also, it is possible to specify the parameter \Rfunarg{n} if each classification represents to a varying number of sequences, e.g., when only unique sequences were originally classified.
 
 \begin{centerfig}
 <<expr16,eval=TRUE,echo=TRUE,fig=TRUE,include=TRUE,height=6,width=6>>=
